# PmxMod

./: AppContext.cpp  AppContext.h  CMakeLists.txt  CMakePresets.json  File.cpp  File.h  MMDCamera.cpp  MMDFileString.h  MMDIkSolver.cpp  MMDIkSolver.h  MMDMaterial.cpp  MMDMaterial.h  MMDModel.cpp  MMDModel.h  MMDMorph.cpp  MMDMorph.h  MMDNode.cpp  MMDNode.h  MMDPhysics.cpp  MMDPhysics.h  MMDShader.cpp  MMDShader.h  Model.cpp  Model.h  PMXFile.cpp  PMXModel.cpp  PMXModel.h  Path.cpp  Path.h  Singleton.h  SjisToUnicode.cpp  SjisToUnicode.h  Time.cpp  Time.h  UnicodeUtil.cpp  UnicodeUtil.h  VMDAnimation.cpp  VMDAnimation.h  VMDAnimationCommon.h  VMDCameraAnimation.cpp  (+7 more)
base/: File.cpp  File.h  Path.cpp  Path.h  UnicodeUtil.cpp  UnicodeUtil.h  Util.h
forge-1.20.1-47.4.10-mdk/: build.gradle  gradle.properties
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/: PmxSteveMod.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/client/: ClientModEvents.java  PmxShaders.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/client/emote/: PmxEmoteWheelState.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/client/gui/: GuiUtil.java  PmxAddStateScreen.java  PmxControlScreen.java  PmxEmoteWheelScreen.java  PmxFileSelectScreen.java  PmxFileWatcher.java  PmxModelSelectScreen.java  PmxModelSettingsScreen.java  PmxSettingsScreenBase.java  PmxSlotSettingsScreen.java  PmxStateSettingsScreen.java  PmxToolSettingsScreen.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/client/hooks/: CameraHooks.java  ClientKeyHooks.java  ClientTickHooks.java  ClientWorldHooks.java  PlayerRenderHooks.java  SoundOptionsHooks.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/client/input/: PmxKeyMappings.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/client/settings/: PmxJsonStoreUtil.java  PmxModelSettingsStore.java  PmxSoundSettingsStore.java  PmxToolSettingsStore.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/client/util/: PmxShaderPackUtil.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/jni/: PmxNative.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/viewer/: PmxCameraController.java  PmxInstance.java  PmxMusicController.java  PmxPlaybackController.java  PmxRenderBase.java  PmxRenderer.java  PmxVanillaRenderer.java  PmxViewer.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/viewer/controllers/: PmxCameraController.java  PmxMusicController.java  PmxPlaybackController.java
forge-1.20.1-47.4.10-mdk/src/main/java/net/Chivent/pmxSteveMod/viewer/renderers/: PmxCustomRenderer.java  PmxGlMesh.java  PmxOculusRenderer.java  PmxRenderBase.java  PmxVanillaRenderer.java  VanillaPoseUtil.java
forge-1.20.1-47.4.10-mdk/src/main/resources/assets/pmx_steve_mod/lang/: en_us.json  ja_jp.json  ko_kr.json  zh_cn.json
forge-1.20.1-47.4.10-mdk/src/main/resources/assets/pmx_steve_mod/shaders/core/: pmx_edge.fsh  pmx_edge.json  pmx_edge.vsh  pmx_mmd.fsh  pmx_mmd.json  pmx_mmd.vsh
jni/: JniBridge.cpp  JniBridge.h
resource/shader_DX11/: mmd.hlsl  mmd_edge.hlsl  mmd_ground_shadow.hlsl
resource/shader_GLFW/: mmd.glsl  mmd_edge.glsl  mmd_ground_shadow.glsl
src/: Animation.cpp  Animation.h  File.cpp  IkSolver.cpp  IkSolver.h  MMDCamera.cpp  MMDCamera.h  MMDFileString.h  MMDIkSolver.cpp  MMDIkSolver.h  MMDMaterial.cpp  MMDMaterial.h  MMDModel.cpp  MMDModel.h  MMDMorph.cpp  MMDMorph.h  MMDNode.cpp  MMDNode.h  MMDPhysics.cpp  MMDPhysics.h  MMDReader.cpp  MMDReader.h  MMDUtil.cpp  MMDUtil.h  Model.cpp  Model.h  Node.cpp  Node.h  PMXFile.cpp  PMXFile.h  Path.h  Physics.cpp  Physics.h  Reader.cpp  Reader.h  Sound.cpp  Sound.h  UnicodeUtil.cpp  Util.cpp  Util.h  (+7 more)
viewer/: DX11Viewer.cpp  DX11Viewer.h  GLFWViewer.cpp  GLFWViewer.h  VKViewer.cpp  VKViewer.h  VULKANViewer.cpp  VULKANViewer.h  Viewer.cpp  Viewer.h
